--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.jakewharton:butterknife:7.0.1'                        // View Injection
     compile 'io.realm:realm-android:0.87.2'                            // Persistence/Caching
+    compile 'com.joanzapata.iconify:android-iconify:2.2.2'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.0.6' // Use FontAwesome icons in TextViews
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'                        // Font Injection
     compile 'com.jakewharton.retrofit:retrofit1-okhttp3-client:1.1.0'
