--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.getnotion.android.bridgeprovisioner.AddNewBridgeActivity">
+        <activity android:name="com.getnotion.android.bridgeprovisioner.activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,7 +27,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.getnotion.android.bridgeprovisioner.activities.AddNewBridgeActivity"/>
         <service android:name="com.getnotion.android.bridgeprovisioner.BridgeProvisioningService"/>
 
     </application>
+
 </manifest>
